Criação Base API
Criação Base API

--- a/jmai_app/assets/css/style.css
+++ b/jmai_app/assets/css/style.css
@@ -10,6 +10,8 @@
   --bs-text-primary: #085f63 !important;
   --bs-primary-rgb: 8,95,99;
 
+  --bs-success: #50cd89;
+
   --bs-component-active-bg: #49beb7;
   --bs-component-hover-color: #49beb7;
   --bs-component-checked-bg: #49beb7;
