--- a/jmai_app/assets/css/style.css
+++ b/jmai_app/assets/css/style.css
@@ -11,6 +11,8 @@
   --bs-primary-rgb: 8,95,99;
 
   --bs-success: #50cd89;
+  --bs-text-success: #50cd89;
+  --bs-success-active: #50cd89;
 
   --bs-component-active-bg: #49beb7;
   --bs-component-hover-color: #49beb7;
