Correção Erros APP / Alteração Mesangens API
Correção Erros APP / Alteração Mesangens API

--- a/jmai_app/assets/css/style.css
+++ b/jmai_app/assets/css/style.css
@@ -13,6 +13,7 @@
   --bs-success: #50cd89;
   --bs-text-success: #50cd89;
   --bs-success-active: #50cd89;
+  --bs-success-rgb: 80, 205, 137;
 
   --bs-component-active-bg: #49beb7;
   --bs-component-hover-color: #49beb7;
