Major UPDATE APP / API
Major UPDATE APP / API

--- a/jmai_app/assets/css/style.css
+++ b/jmai_app/assets/css/style.css
@@ -38,6 +38,10 @@
   color: #085f63 !important;
 }
 
+.background-blue {
+  background-color: #085f63 !important;
+}
+
 .text-light-blue{
   color: #49beb7 !important
 }
